segundo cambio commit

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         <!-- Core CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="inicio">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav2">
-           
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <nav></nav>
+            <a class="navbar-brand js-scroll-trigger" href="inicio">
+                <spam class="d-block d-lg-none"> RUBIO JACOBO</spam>
+                <sapm class="d-none d-lg-block">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="mi foto"></sapm>
+            </a>
+            <button class="navbar-toggler" type="button"></button>
 
 
         </nav>
