--- a/index.html
+++ b/index.html
@@ -19,11 +19,33 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <nav></nav>
             <a class="navbar-brand js-scroll-trigger" href="inicio">
-                <spam class="d-block d-lg-none"> RUBIO JACOBO</spam>
-                <sapm class="d-none d-lg-block">
+                <span class="d-block d-lg-none"> RUBIO JACOBO</span>
+                <span class="d-none d-lg-block">
                     <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="mi foto"></sapm>
             </a>
-            <button class="navbar-toggler" type="button"></button>
+            <button class="navbar-toggler" type="button" data-bs-toogle="collapse"
+            data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+            aria-label="Menu de Navegacion">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse"id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#yo"> sobre mi</a>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#experiencia"> Mi Experencia</a>
+                            <li class="nav-item">
+                                <a class="nav-link js-scroll-trigger" href="#educacion"> educacion</a>
+                                <li class="nav-item">
+                                    <a class="nav-link js-scroll-trigger" href="#habilidades"> habilidades</a>
+                                    <li class="nav-item">
+                                        <a class="nav-link js-scroll-trigger" href="#intereses"> intereses</a>
+                                        <li class="nav-item">
+                                            <a class="nav-link js-scroll-trigger" href="#premios"> premios</a>
+                    </li>
+                </ul>
+
+            </div>
 
 
         </nav>
@@ -33,10 +55,22 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                    
-
-
-
-                </div>
+                   <h1 class="mb-0">Anderson Edu
+                    <span class="text-primary">Rubio Jacobo</span>
+                  </h1>
+                  <div class="subgheading mb-5">
+                     Av 26 de marzo - Florencia de mora
+                    <a href="mailto:educito0.021@gmail.com">educito0.021@gmail.com</a>
+                <p class="lead mb-5">Este es un resumen sobre mi
+                Este es un resumen sobre mi Este es un resumen sobre mi Este es un resumen sobre mi
+                </p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.facebook.com/EduJacobo">
+                        <i class="fab fa-facebook-f"></i>
+                        </a>
+                     </div>
+                     </div>
+                  </div> 
             </section>
             <hr class="m-0" />
             <!-- Experiencia-->
@@ -61,7 +95,17 @@
             <!-- Habilidades-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    
+                        <h2>Habilidades</h2>
+                        <div class="subheading mb-3">
+                            Lenguajes de Programación y Herramientas
+                        </div>
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-react"></i></li>                                                        
+                            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>                            
+                        </ul>
+                    </div>                    
 
 
 
